--- a/templates/index.html
+++ b/templates/index.html
@@ -2,11 +2,12 @@
 <html lang="en">
   <head>
     <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/socket.io/1.3.6/socket.io.min.js"></script>
+    <script src="{{ url_for('static', filename='js/index.js') }}"></script>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
     <meta name="author" content="">
-    <link rel="icon" href="../../../../favicon.ico">
+    <link rel="icon" href="{{ url_for('static', filename='img/chat_logo.png') }}">
 
     <title>Flack Chat</title>
 
