--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <html lang="en">
-  <head>
+<head>
     <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/socket.io/1.3.6/socket.io.min.js"></script>
     <script src="{{ url_for('static', filename='js/index.js') }}"></script>
     <meta charset="utf-8">
@@ -17,126 +17,133 @@
     <!-- Custom styles for this template -->
     <link rel="stylesheet" href="{{ url_for('static', filename='css/index.css') }}">
 
-  </head>
+</head>
 
-  <body >
-    <!-- Modal -->
-    <div class="modal fade" id="userNameModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
-      <div class="modal-dialog modal-dialog-centered" role="document">
+<body>
+<!-- Modal -->
+<div class="modal fade" id="userNameModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle"
+     aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered" role="document">
         <div class="modal-content">
-          <div class="modal-header">
-            <h5 class="modal-title" id="exampleModalLongTitle">Welcome to Flack Chat</h5>
-          </div>
-          <div class="modal-body">
-            <div class="form-group">
-              <label for="recipient-name" class="col-form-label"> Please Enter nickname: </label>
-              <input type="text" class="form-control" id="userName">
+            <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLongTitle">Welcome to Flack Chat</h5>
             </div>
-          </div>
-          <div class="modal-footer">
-            <button type="button" class="btn btn-primary" data-dismiss="modal" onclick="getName()"> Let's Chat ! </button>
-          </div>
+            <div class="modal-body">
+                <div class="form-group">
+                    <label for="recipient-name" class="col-form-label"> Please Enter nickname: </label>
+                    <input type="text" class="form-control" id="userName">
+                </div>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-primary" data-dismiss="modal" onclick="getName()"> Let's Chat !
+                </button>
+            </div>
         </div>
-      </div>
     </div>
+</div>
 
-    <nav class="navbar navbar-dark fixed-top bg-dark flex-md-nowrap p-0 shadow">
-      <h5 id="user" class="navbar-brand col-sm-3 col-md-2 mr-0" >Welcome user</h5>
-      <h4 style="color:white;"> Flack Webchat</h4>
-      <ul class="navbar-nav px-3">
+<nav class="navbar navbar-dark fixed-top bg-dark flex-md-nowrap p-0 shadow">
+    <h5 id="user" class="navbar-brand col-sm-3 col-md-2 mr-0">Welcome user</h5>
+    <h4 style="color:white;"> Flack Webchat</h4>
+    <ul class="navbar-nav px-3">
         <li class="nav-item text-nowrap">
-          <a class="nav-link" href="#">Sign out</a>
+            <a class="nav-link" href="#">Sign out</a>
         </li>
-      </ul>
-    </nav>
+    </ul>
+</nav>
 
-    <div class="container-fluid">
-      <div class="row">
+<div class="container-fluid">
+    <div class="row">
         <nav class="col-md-2 d-none d-md-block bg-light sidebar">
-          <div class="sidebar-sticky">
-            <h6 class="sidebar-heading d-flex justify-content-between align-items-center px-4 mt-4 mb-1 text-muted">
-              <span style="font-size: 20px;">Create Channel</span>
-            </h6>
-            <div class="align p-3 align-items-center">
-            <a class="d-flex justify-content-between align-items-center text-muted" href="#">
-              <input id="channelInput"  style="  width:200px; height:30px;" type="text" name="" value="">
-              <span id="channelCreate" style=" width:27px; height:27px;" data-feather="plus-circle"></span>
-            </a>
-            </div>
-            <ul id="channelsList" class="nav flex-column">
-              <li class="nav-item">
-                <a style="font-size: 20px;" class="nav-link active" href="#">
-                  <span style=" width:27px; height:27px;" data-feather="hash"></span>
-                  PUBLIC CHANNELS <span class="sr-only">(current)</span>
-                </a>
-              </li>
-              {% for channel in channels %}
-                <li class="nav-item ">
-                  <a style="font-size: 18px; color:black;" class="nav-link active px-5" href="#"> {{channel}}</a>
-                </li>
-              {% endfor %}
-            </ul>
+            <div class="sidebar-sticky">
+                <h6 class="sidebar-heading d-flex justify-content-between align-items-center px-4 mt-4 mb-1 text-muted">
+                    <span style="font-size: 20px;">Create Channel</span>
+                </h6>
+                <div class="align p-3 align-items-center">
+                    <a class="d-flex justify-content-between align-items-center text-muted" href="#">
+                        <input id="channelInput" style="  width:200px; height:30px;" type="text" name="" value="">
+                        <span id="channelCreate" style=" width:27px; height:27px;" data-feather="plus-circle"></span>
+                    </a>
+                </div>
+                <ul id="channelsList" class="nav flex-column">
+                    <li class="nav-item">
+                        <a style="font-size: 20px;" class="nav-link active" href="#">
+                            <span style=" width:27px; height:27px;" data-feather="hash"></span>
+                            PUBLIC CHANNELS <span class="sr-only">(current)</span>
+                        </a>
+                    </li>
+                    {% for channel in channels %}
+                        <li class="nav-item ">
+                            <a style="font-size: 18px; color:black;" class="nav-link active px-5"
+                               href="#"> {{ channel }}</a>
+                        </li>
+                    {% endfor %}
+                </ul>
 
-            <ul class="nav flex-column">
-              <li class="nav-item">
-                <a style="font-size: 20px; color:black;" class="nav-link active" href="#">
-                  <span style=" width:27px; height:27px; color:black;" data-feather="hash"></span>
-                  ONLINE USERS <span class="sr-only">(current)</span>
-                </a>
-              </li>
-            </ul>
-          </div>
+                <ul class="nav flex-column">
+                    <li class="nav-item">
+                        <a style="font-size: 20px; color:black;" class="nav-link active" href="#">
+                            <span style=" width:27px; height:27px; color:black;" data-feather="hash"></span>
+                            ONLINE USERS <span class="sr-only">(current)</span>
+                        </a>
+                    </li>
+                </ul>
+            </div>
         </nav>
 
         <main role="main" class="col-md-9 ml-sm-auto col-lg-10 px-4">
-          <ul id="ConversationList" class="list-group list-group-flush py-3">
-            <li class="list-group-item">Cras justo odio</li>
-            <li class="list-group-item">Dapibus ac facilisis in</li>
-            <li class="list-group-item">Morbi leo risus</li>
-            <li class="list-group-item">Porta ac consectetur ac</li>
-            <li class="list-group-item">Vestibulum at eros</li>
-            <li class="list-group-item">Vestibulum at eros</li>
-            <li class="list-group-item">Vestibulum at eros</li>
-            <li class="list-group-item">Vestibulum at eros</li>
-            <li class="list-group-item">Vestibulum at eros</li>
-            <li class="list-group-item">Vestibulum at eros</li>
-            <li class="list-group-item">Vestibulum at eros</li>
-            <li class="list-group-item">Vestibulum at eros</li>
-            <li class="list-group-item">Vestibulum at eros</li>
-            <li class="list-group-item">Vestibulum at eros</li>
-            <li class="list-group-item">Vestibulum at eros</li>
-            <li class="list-group-item">Vestibulum at eros</li>
-            <li class="list-group-item">Vestibulum at eros</li>
-            <li class="list-group-item">Vestibulum at eros</li>
-          </ul>
+            <div class="d-flex justify-content-center flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 border-bottom">
+                <h1 id="roomName" class="h2 text-center">Room Name</h1>
+            </div>
+            <ul id="ConversationList" class="list-group list-group-flush">
+                <li class="list-group-item">Cras justo odio</li>
+                <li class="list-group-item">Dapibus ac facilisis in</li>
+                <li class="list-group-item">Morbi leo risus</li>
+                <li class="list-group-item">Porta ac consectetur ac</li>
+                <li class="list-group-item">Vestibulum at eros</li>
+                <li class="list-group-item">Vestibulum at eros</li>
+                <li class="list-group-item">Vestibulum at eros</li>
+                <li class="list-group-item">Vestibulum at eros</li>
+                <li class="list-group-item">Vestibulum at eros</li>
+                <li class="list-group-item">Vestibulum at eros</li>
+                <li class="list-group-item">Vestibulum at eros</li>
+                <li class="list-group-item">Vestibulum at eros</li>
+                <li class="list-group-item">Vestibulum at eros</li>
+                <li class="list-group-item">Vestibulum at eros</li>
+                <li class="list-group-item">Vestibulum at eros</li>
+                <li class="list-group-item">Vestibulum at eros</li>
+                <li class="list-group-item">Vestibulum at eros</li>
+                <li class="list-group-item">Vestibulum at eros</li>
+            </ul>
 
         </main>
-      </div>
-      <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-end pt-3 pb-2 mb-3">
-        <div class="input-group">
-          <textarea class="form-control" aria-label="With textarea"></textarea>
-        </div>
-      </div>
     </div>
+    <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-end pt-3 pb-2 mb-3">
+        <div class="input-group">
+            <textarea class="form-control" aria-label="With textarea"></textarea>
+        </div>
+    </div>
+</div>
 
-    <!-- Bootstrap core JavaScript
-    ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery-slim.min.js"><\/script>')</script>
-    <script src="../../assets/js/vendor/popper.min.js"></script>
+<!-- Bootstrap core JavaScript
+================================================== -->
+<!-- Placed at the end of the document so the pages load faster -->
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+        crossorigin="anonymous"></script>
+<script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery-slim.min.js"><\/script>')</script>
+<script src="../../assets/js/vendor/popper.min.js"></script>
 
-    <script src="{{ url_for('static', filename='js/bootstrap.min.js') }}"></script>
-    <script src="../../dist/js/bootstrap.min.js"></script>
+<script src="{{ url_for('static', filename='js/bootstrap.min.js') }}"></script>
 
-    <!-- Icons -->
-    <script src="https://unpkg.com/feather-icons/dist/feather.min.js"></script>
-    <script>
-      feather.replace()
-    </script>
+<!-- Icons -->
+<script src="https://unpkg.com/feather-icons/dist/feather.min.js"></script>
+<script>
+    feather.replace()
+</script>
 
-    <!-- Graphs -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.1/Chart.min.js"></script>
+<!-- Graphs -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.1/Chart.min.js"></script>
 
-  </body>
+</body>
 </html>
