--- a/static/css/index.css
+++ b/static/css/index.css
@@ -11,6 +11,15 @@ body {
 /*
  * Sidebar
  */
+#navLinkHead {
+    font-size: 20px;
+    color: #007bff;
+}
+
+#channelCreate {
+    width:27px;
+    height:27px;
+}
 
 .sidebar {
     position: fixed;
@@ -49,7 +58,8 @@ body {
 }
 
 .sidebar .nav-link.active {
-    color: #007bff;
+    color: black;
+    font-size: 18px;
 }
 
 .sidebar .nav-link:hover .feather,
@@ -62,9 +72,18 @@ body {
     text-transform: uppercase;
 }
 
+#createChannelTag {
+    font-size: 20px;
+}
+
 /*
  * Content
  */
+#channelInput {
+      width: 200px;
+      height: 30px;
+}
+
 
 [role="main"] {
     padding-top: 48px; /* Space for fixed navbar */
