doing the function, join room inside user connected, and need to do the func change channel in javascript. don't forget to solve the jinja2 channels inside html, not sure if i am going to use or not.

--- a/templates/index.html
+++ b/templates/index.html
@@ -75,7 +75,7 @@
                     {% for channel in channels %}
                         <li class="nav-item ">
                             <a style="font-size: 18px; color:black;" class="nav-link active px-5"
-                               href="#"> # {{ channel }}</a>
+                               href="#" id="channel"> # {{ channel }}</a>
                         </li>
                     {% endfor %}
                 </ul>
