--- a/templates/index.html
+++ b/templates/index.html
@@ -75,7 +75,7 @@
                     {% for channel in channels %}
                         <li class="nav-item ">
                             <a style="font-size: 18px; color:black;" class="nav-link active px-5"
-                               href="#" id="channel"> # {{ channel }}</a>
+                               href="#" onclick="changeChannel('{{channel}}')"> # {{ channel }}</a>
                         </li>
                     {% endfor %}
                 </ul>
