PROJECT DONE, need to fix the html configuration and maybe to check some erros on sid, that i still dont know

--- a/static/css/index.css
+++ b/static/css/index.css
@@ -1,7 +1,13 @@
 body {
     font-size: .875rem;
 }
+p {
+  margin-bottom: 0rem;
+}
 
+b{
+  font-size: 18px;
+}
 .feather {
     width: 16px;
     height: 16px;
