layout almost ready

--- a/templates/index.html
+++ b/templates/index.html
@@ -90,16 +90,19 @@
             <div class="d-flex justify-content-center flex-wrap flex-md-nowrap align-items-center pt-4 pb-2 border-bottom">
                 <h1 id="roomName" class="text-center">Room Name</h1>
             </div>
-            <ul id="conversationList" class="list-group list-group-flush">
-                <li class="list-group-item"> message Teste</li>
-            </ul>
-            <div class="input-group pt-3">
-                <textarea id="textMessage" class="form-control p-3" aria-label="With textarea"></textarea>
-                <button id="sendBtn" type="button" class="btn btn-primary btn-lg ml-4">SEND</button>
+            <div>
+                <ul id="conversationList" class="list-group list-group-flush ">
+                    <li class="list-group-item"> message Teste</li>
+                </ul>
             </div>
         </main>
     </div>
-
+    <div class="row">
+        <div class="input-group pt-3">
+            <textarea id="textMessage" class="form-control p-3" aria-label="With textarea"></textarea>
+            <button id="sendBtn" type="button" class="btn btn-primary btn-lg ml-4">SEND</button>
+        </div>
+    </div>
 </div>
 
 <!-- Bootstrap core JavaScript
