--- a/static/css/index.css
+++ b/static/css/index.css
@@ -26,7 +26,9 @@ b{
     width:27px;
     height:27px;
 }
-
+#conversationList{
+    height: calc(100vh - 270px);
+}
 .sidebar {
     position: fixed;
     top: 0;
